--- a/src/scss/objects/_objects.header.scss
+++ b/src/scss/objects/_objects.header.scss
@@ -27,7 +27,7 @@
     }
 
     &__content {
-      height: 85px / $global-font-size * 1em;
+      height: 88px / $global-font-size * 1em;
 
       > div {
         padding: $global-spacing-unit 0;
