--- a/src/site/css/index.css
+++ b/src/site/css/index.css
@@ -423,14 +423,6 @@ body {
     body.tmpl-report.u-dark {
       color: var(--color-bg);
       background: var(--color-text); }
-    body.tmpl-report .o-header:hover {
-      background: var(--color-text);
-      color: var(--color-bg);
-      /*
-      @media (prefers-color-scheme: dark) {
-        background: var(--color-bg);
-        color: var(--color-text);
-      } */ }
   @media (min-width: 61.25em) {
     body {
       padding-top: 180px; }
@@ -446,7 +438,15 @@ body {
         background: var(--color-text);
       } */ }
       body.u-dark .o-header {
-        background: var(--color-text); } }
+        background: var(--color-text); }
+      body.tmpl-report .o-header:hover {
+        background: var(--color-text);
+        color: var(--color-bg);
+        /*
+      @media (prefers-color-scheme: dark) {
+        background: var(--color-bg);
+        color: var(--color-text);
+      } */ } }
 
 h1 {
   font-size: 22px !important;
@@ -525,15 +525,14 @@ pre {
 
 .c-logo {
   display: inline-block;
-  height: 1em; }
+  height: 1.2em; }
   .c-logo svg {
-    height: 100%;
-    height: 99%;
+    height: 92%;
     width: auto;
     fill: currentColor !important; }
   @media (min-width: 46.25em) {
     .c-logo {
-      height: 1.3em; } }
+      height: 1.5em; } }
 
 .c-nav-item a {
   display: block;
@@ -680,8 +679,7 @@ pre {
     display: none; }
   .c-light svg {
     fill: currentColor !important;
-    margin-top: 0.2em;
-    height: 30px;
+    height: 24px;
     width: auto;
     transition: 300ms transform;
     transform: scale(1); }
@@ -690,10 +688,15 @@ pre {
     transition: 300ms opacity; }
   .c-light label {
     cursor: pointer; }
-    .c-light label:hover svg {
-      transform: scale(1.2); }
-    .c-light label:active {
-      cursor: grab; }
+    @media (min-width: 61.25em) {
+      .c-light label {
+        margin-top: 0.2em; }
+        .c-light label svg {
+          height: 30px; }
+        .c-light label:hover svg {
+          transform: scale(1.2); }
+        .c-light label:active {
+          cursor: grab; } }
   .c-light input:checked ~ label #shine {
     opacity: 1; }
 
@@ -717,7 +720,7 @@ pre {
         padding-right: 60px !important;
         border-right: 1px solid currentColor; }
       .o-header__content {
-        height: 4.72222em; }
+        height: 4.88889em; }
         .o-header__content > div {
           padding: 30px 0; }
       .o-header__nav {
